@@ -1,4 +1,7 @@
+
 VERSION 0.8.1
+
+- added NullReference in ORM to avoid NPE handling on nullified References
 
 - added function to create lazy object reference by dao and id to application context
  (was useful to me for dto-to-model copy constructor)
